# extension-template

./: AGENTS.md  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: cdf_extension.cpp  cdf_optimizer.cpp
src/include/: cdf_extension.hpp
test/sql/cdf/: cdf.test  cdf_bug.test  cdf_delete.test  cdf_read.test  cdf_read_version.test  cdf_update.test  cdf_vacuum.test
